# oxidict

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml
src/: lib.rs
