[package]
name = "oxidict"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "oxidict"
crate-type = ["cdylib"]

[dependencies]


[dependencies.pyo3]
version = "0.22.0"
# "abi3-py310" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.10
# ABI is the Application Binary Interface, which is the interface between the Rust code and the Python code.
features = ["abi3-py310"]
